# Contextual-Augmentation-for-EL-using-LLMs

./: AIDA_eda.ipynb  MSNBCt.ttl  MSNBCt_eda.ipynb  N3_eda.ipynb  README.md  grader.py  kore50_eda.ipynb  oke_eda.ipynb  pyproject.toml
AIDA-EE/: apw_eng_201011.tsv
KORE50/: AIDA.tsv  README.TXT
app/: run_pipeline.py
app/data/: __init__.py  dataset.py
app/ollama/: __init__.py  enhanced_llm_service.py  llm_service.py  models.py
app/prompts/: __init__.py
app/utils/: evaluate_results.py  evaluate_results_improved.py
data/: README.md
data/AIDA-EE/: ._README.txt  README.txt
data/KORE50/: KORE50.tsv
data/jsons/: KORE50.json  MSNBCt.json  RSS-500.json  Reuters-128.json  evaluation-dataset-task1.json
docs/: README.md
notebooks/: README.md
notebooks/eda/: AIDA_eda.ipynb  (+4 more)
results/: KORE50_deepseek-r1_7b_results.json  KORE50_gemma3_4b_results.json  KORE50_llama3.2_3b_results.json  MSNBCt_deepseek-r1_7b_results.json  MSNBCt_gemma3_4b_results.json  MSNBCt_llama3.2_3b_results.json  RSS-500_deepseek-r1_7b_results.json  RSS-500_gemma3_4b_results.json  RSS-500_llama3.2_3b_results.json  Reuters-128_deepseek-r1_7b_results.json  Reuters-128_gemma3_4b_results.json  Reuters-128_llama3.2_3b_results.json  deepseek-r1_7b_RSS-500_results.csv  evaluation-dataset-task1_deepseek-r1_7b_results.json  evaluation-dataset-task1_gemma3_4b_results.json  evaluation-dataset-task1_llama3.2_3b_results.json  llama3.2_3b_KORE50_results.csv  llama3.2_3b_MSNBCt_results.csv  llama3.2_3b_RSS-500_results.csv  llama3.2_3b_Reuters-128_results.csv  llama3.2_3b_evaluation-dataset-task1_results.csv
(+9 files in other folders)
