[project]
name = "contextual-augmentation-for-el-using-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "rdflib>=7.4.0",
    "seaborn>=0.13.2",
]
