[project]
name = "contextual-augmentation-for-el-using-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "rdflib>=7.4.0",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

